--- a/apps/web/src/layouts/Layout.astro
+++ b/apps/web/src/layouts/Layout.astro
@@ -10,14 +10,19 @@ const { title, description, image } = Astro.props;
 <!doctype html>
 <html lang="en">
   <head>
-    <HeadComponent title={title} description={description} image={image}/>
+    <HeadComponent title={title} description={description} image={image} />
+    <script
+      src="https://cdn.databuddy.cc/databuddy.js"
+      data-client-id="4-KAEZVpa2ZPahKtH3w7D"
+      crossorigin="anonymous"
+      async></script>
   </head>
   <body>
-    <HeaderComponent/>
+    <HeaderComponent />
     <main>
-      <slot/>
+      <slot />
     </main>
-    <FooterComponent/>
-    <ScrollToTop/>
+    <FooterComponent />
+    <ScrollToTop />
   </body>
 </html>
